[package]
name = "sway_helper"
version = "0.1.0"
edition = "2021"
categories = []
description = ""
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/ModProg/sway_helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.19", features = ["derive"] }
derive_more = "0.99.17"
serde = { version = "1.0.147", features = ["derive"] }
swayipc = "3.0.1"
